--- a/my-project/index.html
+++ b/my-project/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My First Web Page</title>
 </head>
 <body>
-  
+  <h1>Hello, I'm Ben!</h1>
+  <p>I'm learning frontend development. 🚀</p>
 </body>
 </html>
