--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,6 +6,7 @@
   <title>My First Web Page</title>
 </head>
 <body>
+  <link rel="stylesheet" href="css/style.css">
   <h1>Hello, I'm Ben!</h1>
   <p>I'm learning frontend development. 🚀</p>
 </body>
