--- a/my-project/index.html
+++ b/my-project/index.html
@@ -3,12 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Web Page</title>
-  <script src="js/script.js"></script>
+  <title>Ben Ignacio - Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <link rel="stylesheet" href="css/style.css">
-  <h1>Hello, I'm Ben!</h1>
-  <p>I'm learning frontend development. 🚀</p>
+
+  <header>
+    <h1>Ben Ignacio</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="mailto:youremail@gmail.com">Contact</a>
+      <button id="theme-toggle">🌙 Toggle Theme</button>
+    </nav>
+  </header>
+
+  <main>
+    <section class="profile">
+      <img src="images/profilepic.jpg" alt="Profile Photo">
+    </section>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Hello! I'm Ben Ignacio, a passionate Web Developer and System Analyst. I enjoy creating beautiful websites and solving problems with code.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Ben Ignacio</p>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
