--- a/my-project/index.html
+++ b/my-project/index.html
@@ -28,6 +28,34 @@
     </section>
   </main>
 
+  <!-- Skills Card -->
+    <section id="services" class="max-w-7xl mx-auto px-6 mt-20" data-aos="fade-up">
+      <h3 class="text-2xl font-semibold text-[#00ffd5] mb-8">💼 What I Do</h3>
+      
+      <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+        <!-- Card 1 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <img src="images/web-dev.png" alt="Web Dev" class="w-12 mb-4">
+          <h4 class="text-xl font-semibold text-[#00ffd5]">Web Development</h4>
+          <p class="text-gray-300 mt-2 text-sm">Building responsive websites using HTML, CSS, JS, and frameworks.</p>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <img src="images/ui-design.png" alt="UI Design" class="w-12 mb-4">
+          <h4 class="text-xl font-semibold text-[#00ffd5]">UI/UX Design</h4>
+          <p class="text-gray-300 mt-2 text-sm">Designing clean and modern interfaces for web and mobile apps.</p>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <img src="images/system-analysis.png" alt="System Analysis" class="w-12 mb-4">
+          <h4 class="text-xl font-semibold text-[#00ffd5]">System Analysis</h4>
+          <p class="text-gray-300 mt-2 text-sm">Analyzing, planning, and documenting system processes and workflows.</p>
+        </div>
+      </div>
+    </section>
+
   <footer>
     <p>© 2025 Ben Ignacio</p>
   </footer>
