--- a/my-project/index.html
+++ b/my-project/index.html
@@ -12,6 +12,7 @@
     <h1>Ben Ignacio</h1>
     <nav>
       <a href="#about">About</a>
+      <a href="services">Services</a>
       <a href="mailto:youremail@gmail.com">Contact</a>
       <button id="theme-toggle">🌙 Toggle Theme</button>
     </nav>
