--- a/my-project/index.html
+++ b/my-project/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ben Ignacio - Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -33,10 +32,10 @@
     <section id="services" class="max-w-7xl mx-auto px-6 mt-20" data-aos="fade-up">
       <h3 class="text-2xl font-semibold text-[#00ffd5] mb-8">💼 What I Do</h3>
       
-      <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+        <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
         <!-- Card 1 -->
         <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
-          <img src="images/web-dev.png" alt="Web Dev" class="w-12 mb-4">
+          <img src="images/web-dev.png" alt="Web Development" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-[#00ffd5]">Web Development</h4>
           <p class="text-gray-300 mt-2 text-sm">Building responsive websites using HTML, CSS, JS, and frameworks.</p>
         </div>
