--- a/my-project/index.html
+++ b/my-project/index.html
@@ -1,38 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ben Ignacio - Portfolio</title>
-</head>
-<body>
 
-  <header>
-    <h1>Ben Ignacio</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="services">Services</a>
-      <a href="mailto:youremail@gmail.com">Contact</a>
-      <button id="theme-toggle">🌙 Toggle Theme</button>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = { darkMode: 'class' }
+  </script>
+
+  <!-- Google Fonts (Optional) -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/png">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
+</head>
+
+<body class="bg-gray-900 text-white">
+
+  <!-- Header -->
+  <header class="flex items-center justify-between max-w-7xl mx-auto p-6">
+    <h1 class="text-2xl font-bold text-[#00ffd5]">Ben Ignacio</h1>
+    <nav class="hidden md:flex space-x-6 text-sm text-gray-400">
+      <a href="#about" class="hover:text-[#00ffd5]">About</a>
+      <a href="#services" class="hover:text-[#00ffd5]">Services</a>
+      <a href="mailto:youremail@gmail.com" class="hover:text-[#00ffd5]">Contact</a>
     </nav>
+    <button id="theme-toggle" class="border border-[#00ffd5] px-4 py-2 rounded-full hover:bg-[#00ffd5] hover:text-black transition">
+      🌙 Toggle Theme
+    </button>
   </header>
 
-  <main>
-    <section class="profile">
-      <img src="images/profilepic.jpg" alt="Profile Photo">
+  <!-- Main -->
+  <main class="max-w-7xl mx-auto px-6">
+
+    <!-- Profile Section -->
+    <section class="text-center mt-10">
+      <img src="images/profilepic.jpg" alt="Profile Photo" class="w-32 h-32 rounded-full mx-auto border-4 border-[#00ffd5] shadow-lg mb-4">
+      <h2 class="text-4xl font-bold">Hi, I'm Ben 👋</h2>
+      <p class="text-lg mt-2 text-gray-400">Web Developer | System Analyst | UI/UX Designer</p>
     </section>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Hello! I'm Ben Ignacio, a passionate Web Developer and System Analyst. I enjoy creating beautiful websites and solving problems with code.</p>
+    <!-- About Section -->
+    <section id="about" class="mt-20">
+      <h3 class="text-2xl font-semibold text-[#00ffd5] mb-4">📖 About Me</h3>
+      <p class="text-gray-300 leading-relaxed">
+        Hello! I'm <span class="text-[#00ffd5] font-medium">Ben Ignacio</span>, a passionate Web Developer and System Analyst. 
+        I enjoy creating beautiful websites and solving problems with code. My goal is to build user-friendly, responsive, and visually appealing websites that make a difference.
+      </p>
     </section>
-  </main>
 
-  <!-- Skills Card -->
-    <section id="services" class="max-w-7xl mx-auto px-6 mt-20" data-aos="fade-up">
+    <!-- Services Section -->
+    <section id="services" class="mt-20">
       <h3 class="text-2xl font-semibold text-[#00ffd5] mb-8">💼 What I Do</h3>
-      
-        <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+
+      <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
         <!-- Card 1 -->
         <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
           <img src="images/web-dev.png" alt="Web Development" class="w-12 mb-4">
@@ -55,9 +85,11 @@
         </div>
       </div>
     </section>
+  </main>
 
-  <footer>
-    <p>© 2025 Ben Ignacio</p>
+  <!-- Footer -->
+  <footer class="text-center text-gray-500 text-sm py-6 border-t border-gray-700 mt-20">
+    &copy; 2025 Ben Ignacio. All rights reserved.
   </footer>
 
   <script src="js/script.js"></script>
