--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,7 +8,16 @@
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = { darkMode: 'class' }
+    tailwind.config = { 
+      darkMode: 'class',
+    theme: {
+      extend: {
+        colors: {
+          primary: '#00ffd5',
+        }
+      }
+    }
+   };
   </script>
 
   <!-- Google Fonts (Optional) -->
