--- a/my-project/index.html
+++ b/my-project/index.html
@@ -8,13 +8,14 @@
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = { 
+    tailwind.config = {
       darkMode: 'class',
       theme: {
         extend: {
           colors: {
             primary: '#00b36b',
             primaryHover: '#00cc7a',
+            background: '#0f0f0f'
           }
         }
       }
@@ -34,7 +35,7 @@
   </style>
 </head>
 
-<body class="bg-gray-900 text-white">
+<body class="bg-background text-white">
 
   <!-- Header -->
   <header class="flex items-center justify-between max-w-7xl mx-auto p-6">
@@ -53,7 +54,7 @@
   <main class="max-w-7xl mx-auto px-6">
 
     <!-- Profile Section -->
-    <section class="text-center mt-10">
+    <section class="text-center mt-16">
       <img src="images/profilepic.jpg" alt="Profile Photo" class="w-32 h-32 rounded-full mx-auto border-4 border-primary shadow-lg mb-4">
       <h2 class="text-4xl font-bold">Hi, I'm Ben 👋</h2>
       <p class="text-lg mt-2 text-gray-400">Web Developer | System Analyst | UI/UX Designer</p>
@@ -77,7 +78,7 @@
         <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
           <img src="images/web-dev.png" alt="Web Development" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-primary">Web Development</h4>
-          <p class="text-gray-300 mt-2 text-sm">Building responsive websites using HTML, CSS, JS, and frameworks.</p>
+          <p class="text-gray-300 mt-2 text-sm">Building responsive websites using HTML, CSS, JavaScript, and frameworks.</p>
         </div>
 
         <!-- Card 2 -->
@@ -102,6 +103,7 @@
     &copy; 2025 Ben Ignacio. All rights reserved.
   </footer>
 
+  <!-- JavaScript -->
   <script src="js/script.js"></script>
 </body>
 </html>
