--- a/my-project/index.html
+++ b/my-project/index.html
@@ -33,6 +33,10 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
+
+  <!-- AOS CSS -->
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 </head>
 
 <body class="bg-background text-white">
@@ -104,6 +108,6 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="js/script.js"></script>
+  <script src="js/script.js"></scrip>
 </body>
 </html>
