--- a/my-project/index.html
+++ b/my-project/index.html
@@ -36,7 +36,6 @@
 
   <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 </head>
 
 <body class="bg-background text-white">
@@ -108,6 +107,6 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="js/script.js"></scrip>
+  <script src="js/script.js"></script>
 </body>
 </html>
