--- a/my-project/index.html
+++ b/my-project/index.html
@@ -106,6 +106,9 @@
     &copy; 2025 Ben Ignacio. All rights reserved.
   </footer>
 
+  <!-- AOS JS-->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
   <!-- JavaScript -->
   <script src="js/script.js"></script>
 </body>
