--- a/my-project/index.html
+++ b/my-project/index.html
@@ -46,6 +46,7 @@
     <nav class="hidden md:flex space-x-6 text-sm text-gray-400">
       <a href="#about" class="hover:text-primary">About</a>
       <a href="#services" class="hover:text-primary">Services</a>
+      <a href="#certifications" class="hover:text-primary">Certifications</a>
       <a href="mailto:youremail@gmail.com" class="hover:text-primary">Contact</a>
     </nav>
     <button id="theme-toggle" class="border border-primary px-4 py-2 rounded-full hover:bg-primary hover:text-black transition">
@@ -96,6 +97,34 @@
           <img src="images/system-analysis.png" alt="System Analysis" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-primary">System Analysis</h4>
           <p class="text-gray-300 mt-2 text-sm">Analyzing, planning, and documenting system processes and workflows.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="max-w-7xl mx-auto mt-20 px-6">
+      <h3 class="text-2xl font-semibold text-primary mb-8">🎓 Certifications</h3>
+
+      <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+        <!-- Certifications Card 1 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <h4 class="text-lg font-semibold text-primary">Frontend Developer Certifications</h4>
+          <p class="text-sm text-gray-400 mt-2">Issued by FreeCodeCamp (2024)</p>
+          <a href="#" target="_blank" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">View Credentials</a>
+        </div>
+
+        <!-- Certifications Card 2 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <h4 class="text-lg font-semibold text-primary">JavaScript Algorithms & Data</h4>
+          <p class="text-sm text-gray-400 mt-2">Issued by Coursera (2023)</p>
+          <a href="#" target="_blank" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">View Credential</a>
+        </div>
+
+        <!-- Certifications Card 2 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <h4 class="text-lg font-semibold text-primary">UI/UX Design Essentials</h4>
+          <p class="text-sm text-gray-400 mt-2">Issued by Udemy (2022)</p>
+          <a href="#" target="_blank" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">View Credential</a>
         </div>
       </div>
     </section>
