--- a/my-project/index.html
+++ b/my-project/index.html
@@ -22,6 +22,9 @@
     };
   </script>
 
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
@@ -152,31 +155,38 @@
   </main>
 
   <!-- Footer -->
-  <footer class="text-center text-gray-500 text-sm py-6 border-t border-gray-700 mt-20">
-    <div class="flex justify-center gap-6 mb-3">
+  <div class="border-t border-gray-700 mt-20 py-8">
+    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
 
+      <!-- Name -->
+      <h2 class="text-xl font-semibold text-primary">Ben Ignacio</h2>
+
+      <!-- Social Icons -->
+      <div class="flex space-x-6"></div>
       <!-- GithHub -->
-      <a href="https://github.com/benignacio0426" target="_blank" class="hover:text-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M12 .5C5.73.5.5 5.73.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.2.8-.5v-1.8c-3.2.7-3.8-1.5-3.8-1.5-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.2 1.7 1.2 1 .1 1.6-.8 2-1.2.3-.7.5-1 .9-1.2-2.5-.3-5.1-1.2-5.1-5.3 0-1.2.4-2.1 1-2.8-.1-.3-.4-1.4.1-2.9 0 0 .8-.2 2.7 1 .7-.2 1.4-.3 2.1-.3s1.4.1 2.1.3c1.8-1.2 2.7-1 2.7-1 .5 1.5.2 2.6.1 2.9.6.7 1 1.7 1 2.8 0 4.1-2.6 5-5.1 5.3.5.4.9 1.1.9 2.3v3.3c0 .3.2.6.8.5C20.7 21.4 24 17.1 24 12 24 5.73 18.77.5 12 .5z" />
-        </svg>
+      <a href="https://github.com/benignacio0426" target="_blank" class="text-gray-400 hover:text-primary hover:scale-110 transition">
+        <i class="fa-brands fa-github text-2xl"></i>
       </a>
 
       <!-- Email -->
-      <a href="mailto:benignacio0426@gmail.com" class="hover:text-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M2 4a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4zm2 0v.01L12 13 20 4.01V4H4zm16 2.083L12 14 4 6.083V20h16V6.083z" />
-        </svg>
+      <a href="mailto:benignacio0426@gmail.com" class="text-gray-400 hover:text-primary hover:scale-110 transition">
+        <i class="fa-solid fa-envelope text-2xl"></i>
       </a>
 
       <!-- Facebook -->
-      <a href="https://facebook.com/profile.php?id=61562975307588" target="_blank" class="hover:text-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M22.675 0H1.325C.593 0 0 .593 0 1.326v21.348C0 23.407.593 24 1.325 24h11.494v-9.294H9.691V11.03h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.464.099 2.797.143v3.24h-1.918c-1.505 0-1.796.715-1.796 1.763v2.312h3.59l-.467 3.676h-3.123V24h6.116C23.407 24 24 23.407 24 22.674V1.326C24 .593 23.407 0 22.675 0z" />
-        </svg>
+      <a href="https://facebook.com/profile.php?id=61562975307588" target="_blank" class="text-gray-400 hover:text-primary hover:scale-110 transition">
+        <i class="fa-brands fa-facebook text-2xl"></i>
+      </a>
+
+      <!-- Instagram -->
+      <a href="https://instagram.com/ur_benignacio" target="_blank" class="text-gray-400 hover:text-primary hover:scale-110 transition">
+        <i class="fa-brands fa-instagram text-2xl"></i>
       </a>
     </div>
-    <p>&copy; 2025 Ben Ignacio. All rights reserved.</p>
+  </div>
+    <p class="text-center text-gray-500 text-sm mt-6">
+      &copy; 2025 Ben Ignacio. All rights reserved.
+    </p>
   </footer>
 
   <!-- AOS JS-->
