--- a/my-project/index.html
+++ b/my-project/index.html
@@ -155,14 +155,14 @@
   </main>
 
   <!-- Footer -->
-  <div class="border-t border-gray-700 mt-20 py-8">
-    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
+  <footer class="border-t border-gray-700 mt-20 py-8">
+    < class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
 
       <!-- Name -->
       <h2 class="text-xl font-semibold text-primary">Ben Ignacio</h2>
 
       <!-- Social Icons -->
-      <div class="flex space-x-6"></div>
+      <div class="flex space-x-6">
       <!-- GithHub -->
       <a href="https://github.com/benignacio0426" target="_blank" class="text-gray-400 hover:text-primary hover:scale-110 transition">
         <i class="fa-brands fa-github text-2xl"></i>
@@ -183,7 +183,6 @@
         <i class="fa-brands fa-instagram text-2xl"></i>
       </a>
     </div>
-  </div>
     <p class="text-center text-gray-500 text-sm mt-6">
       &copy; 2025 Ben Ignacio. All rights reserved.
     </p>
