--- a/my-project/index.html
+++ b/my-project/index.html
@@ -156,7 +156,7 @@
 
   <!-- Footer -->
   <footer class="border-t border-gray-700 mt-20 py-8">
-    < class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
+    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
 
       <!-- Name -->
       <h2 class="text-xl font-semibold text-primary">Ben Ignacio</h2>
@@ -183,6 +183,8 @@
         <i class="fa-brands fa-instagram text-2xl"></i>
       </a>
     </div>
+  </div>
+
     <p class="text-center text-gray-500 text-sm mt-6">
       &copy; 2025 Ben Ignacio. All rights reserved.
     </p>
