--- a/my-project/index.html
+++ b/my-project/index.html
@@ -191,7 +191,7 @@
   </footer>
 
   <!-- Back to Top Button -->
-  <button id="backToTopBtn" class="fixed bottom-6 right-6 hidden p-3 rounded-full bg-cyan-500 hover:bg-cyan-600 text-white shadow-lg transition duration-300 z-50">
+  <button id="backToTopBtn" class="fixed bottom-6 right-6 hidden p-3 rounded-full bg-primary hover:bg-primaryHover text-white shadow-lg transition duration-300 z-50">
     ↑
   </button>
 
