--- a/my-project/index.html
+++ b/my-project/index.html
@@ -57,6 +57,11 @@
     </button>
   </header>
 
+  <!-- Preloader -->
+  <div id="preloader" class="fixed inset-0 bg-background flex items-center justify-center z-[9999]">
+    <div class="loader border-4 border-primary border-t-transparent rounded-full w-16 h-16 animate-spin"></div>
+  </div>
+
   <!-- Main -->
   <main class="max-w-7xl mx-auto px-6">
 
