--- a/my-project/index.html
+++ b/my-project/index.html
@@ -49,6 +49,7 @@
     <nav class="hidden md:flex space-x-6 text-sm text-gray-400">
       <a href="#about" class="hover:text-primary">About</a>
       <a href="#services" class="hover:text-primary">Services</a>
+      <a href="#skills" class="hover:text-primary">Skills</a>
       <a href="#certifications" class="hover:text-primary">Certifications</a>
       <a href="#contact" class="hover:text-primary">Contact</a>
     </nav>
@@ -105,6 +106,53 @@
           <img src="images/system-analysis.png" alt="System Analysis" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-primary">System Analysis</h4>
           <p class="text-gray-300 mt-2 text-sm">Analyzing, planning, and documenting system processes and workflows.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="mt-20" data-aos="fade-up">
+      <h3 class="text-2xl font-semibold text-primary mb-8">🛠 Skills</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+        <!-- Skill 1 -->
+        <div>
+          <h4 class="text-white mb-1">HTML</h4>
+          <div class="w-full bg-gray-700 rounded-full h-3">
+            <div class="bg-primary h-3 rounded-full" style="width: 95%;"></div>
+          </div>
+        </div>
+
+        <!-- Skill 2 -->
+        <div>
+          <h4 class="text-white mb-1">CSS & Tailwind</h4>
+          <div class="w-full bg-gray-700 rounded-full h-3">
+            <div class="bg-primary h-3 rounded-full" style="width: 90%;"></div>
+          </div>
+        </div>
+
+        <!-- Skill 3 -->
+        <div>
+          <h4 class="text-white mb-1">JavaScript</h4>
+          <div class="w-full bg-gray-700 rounded-full h-3">
+            <div class="bg-primary h-3 rounded-full" style="width: 85%;"></div>
+          </div>
+        </div>
+
+        <!-- Skill 4 -->
+        <div>
+          <h4 class="text-white mb-1">UI/UX Design</h4>
+          <div class="w-full bg-gray-700 rounded-full h-3">
+            <div class="bg-primary h-3 rounded-full" style="width: 80%;"></div>
+          </div>
+        </div>
+
+        <!-- Skill 5 -->
+        <div>
+          <h4 class="text-white mb-1">System Analysis</h4>
+          <div class="w-full bg-gray-700 rounded-full h-3">
+            <div class="bg-primary h-3 rounded-full" style="width: 85%;"></div>
+          </div>
         </div>
       </div>
     </section>
