--- a/my-project/index.html
+++ b/my-project/index.html
@@ -68,7 +68,7 @@
 
     <!-- Profile Section -->
     <section class="text-center mt-16">
-      <img src="images/profilepic.jpg" alt="Profile Photo" class="w-32 h-32 rounded-full mx-auto border-4 border-primary shadow-lg mb-4">
+      <img src="assets/images/profilepic.jpg" alt="Profile Photo" class="w-32 h-32 rounded-full mx-auto border-4 border-primary shadow-lg mb-4">
       <h2 class="text-4xl font-bold">Hi, I'm Ben 👋</h2>
       <p class="text-lg mt-2 text-gray-400">Web Developer | System Analyst | UI/UX Designer</p>
     </section>
@@ -89,21 +89,21 @@
       <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
         <!-- Card 1 -->
         <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
-          <img src="images/web-dev.png" alt="Web Development" class="w-12 mb-4">
+          <img src="assets/images/web-dev.png" alt="Web Development" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-primary">Web Development</h4>
           <p class="text-gray-300 mt-2 text-sm">Building responsive websites using HTML, CSS, JavaScript, and frameworks.</p>
         </div>
 
         <!-- Card 2 -->
         <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
-          <img src="images/ui-design.png" alt="UI Design" class="w-12 mb-4">
+          <img src="assets/images/ui-design.png" alt="UI Design" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-primary">UI/UX Design</h4>
           <p class="text-gray-300 mt-2 text-sm">Designing clean and modern interfaces for web and mobile apps.</p>
         </div>
 
         <!-- Card 3 -->
         <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
-          <img src="images/system-analysis.png" alt="System Analysis" class="w-12 mb-4">
+          <img src="assets/images/system-analysis.png" alt="System Analysis" class="w-12 mb-4">
           <h4 class="text-xl font-semibold text-primary">System Analysis</h4>
           <p class="text-gray-300 mt-2 text-sm">Analyzing, planning, and documenting system processes and workflows.</p>
         </div>
