--- a/my-project/index.html
+++ b/my-project/index.html
@@ -80,6 +80,8 @@
         Hello! I'm <span class="text-primary font-medium">Ben Ignacio</span>, a passionate Web Developer and System Analyst. 
         I enjoy creating beautiful websites and solving problems with code. My goal is to build user-friendly, responsive, and visually appealing websites that make a difference.
       </p>
+      <a href="assets/files/BenIgnacioCV2024.pdf" download 
+        class="inline-block mt-6 px-6 py-3 bg-primary hover:bg-primaryHover text-black font-semibold rounded-xl transition hover:scale-105">📄 Download Resume</a>
     </section>
 
     <!-- Services Section -->
