--- a/my-project/index.html
+++ b/my-project/index.html
@@ -51,6 +51,7 @@
       <a href="#services" class="hover:text-primary">Services</a>
       <a href="#skills" class="hover:text-primary">Skills</a>
       <a href="#certifications" class="hover:text-primary">Certifications</a>
+      <a href="#testimonials" class="hover:text-primary">Testimonials</a>
       <a href="#contact" class="hover:text-primary">Contact</a>
     </nav>
     <button id="theme-toggle" class="border border-primary px-4 py-2 rounded-full hover:bg-primary hover:text-black transition">
@@ -183,6 +184,47 @@
           <h4 class="text-lg font-semibold text-primary">UI/UX Design Essentials</h4>
           <p class="text-sm text-gray-400 mt-2">Issued by Udemy (2022)</p>
           <a href="#" target="_blank" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">View Credential</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials Section -->
+
+    <section id="testimonials" class="mt-20">
+      <h3 class="text-2xl font-semibold text-primary mb-8">🌟 Testimonials</h3>
+
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+
+        <!-- Testimonial 1 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <p class="text-gray-300">
+            “Ben was outstanding to work with. His creativity and coding skills helped us build a website that truly stands out. Highly recommended!”
+          </p>
+          <p class="text-primary mt-4 font-semibold">— John Doe, Project Manager</p>
+        </div>
+
+        <!-- Testimonial 2 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <p class="text-gray-300">
+            “Working with Ben was an excellent experience. His attention to detail and design thinking made the project smooth and successful.”
+          </p>
+          <p class="text-primary mt-4 font-semibold">— Jane Smith, Business Owner</p>
+        </div>
+
+        <!-- Testimonial 3 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <p class="text-gray-300">
+            “Very professional and responsive. Ben delivered beyond our expectations, both on time and with high quality.”
+          </p>
+          <p class="text-primary mt-4 font-semibold">— Alex Garcia, Freelance Client</p>
+        </div>
+
+        <!-- Testimonial 4 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <p class="text-gray-300">
+            “From UI/UX design to development, Ben brought our vision to life. Looking forward to working with him again.”
+          </p>
+          <p class="text-primary mt-4 font-semibold">— Maria Lopez, Startup Founder</p>
         </div>
       </div>
     </section>
