--- a/my-project/index.html
+++ b/my-project/index.html
@@ -52,6 +52,7 @@
       <a href="#skills" class="hover:text-primary">Skills</a>
       <a href="#certifications" class="hover:text-primary">Certifications</a>
       <a href="#testimonials" class="hover:text-primary">Testimonials</a>
+      <a href="#blog" class="hover:text-primary">Blog</a>
       <a href="#contact" class="hover:text-primary">Contact</a>
     </nav>
     <button id="theme-toggle" class="border border-primary px-4 py-2 rounded-full hover:bg-primary hover:text-black transition">
@@ -228,6 +229,52 @@
         </div>
       </div>
     </section>
+
+    <!-- Blog / Articles Section -->
+    <section id="blog" class="mt-20">
+      <h3 class="text-2xl font-semibold text-primary mb-8">📝 Blog & Articles</h3>
+
+      <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+
+        <!-- Blog Post 1 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <h4 class="text-lg font-semibold text-primary mb-2">
+            5 Tips for Writing Clean HTML & CSS
+          </h4>
+          <p class="text-sm text-gray-400">
+            Learn how to write maintainable, readable, and clean HTML & CSS for modern web development.
+          </p>
+          <a href="#" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+            Read More →
+          </a>
+        </div>
+
+        <!-- Blog Post 2 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <h4 class="text-lg font-semibold text-primary mb-2">
+            UI/UX Principles Every Developer Should Know
+          </h4>
+          <p class="text-sm text-gray-400">
+            Understanding the basics of user experience and interface design can take your projects to the next level.
+          </p>
+          <a href="#" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+            Read More →
+          </a>
+        </div>
+
+        <!-- Blog Post 3 -->
+        <div class="bg-white/5 border border-white/10 p-6 rounded-xl hover:scale-105 hover:shadow-xl transition">
+          <h4 class="text-lg font-semibold text-primary mb-2">
+            How I Built My Portfolio with HTML, Tailwind & JS
+          </h4>
+          <p class="text-sm text-gray-400">
+            A step-by-step walkthrough on how I designed and developed my personal portfolio from scratch.
+          </p>
+          <a href="#" class="mt-4 inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+            Read More →
+          </a>
+        </div>
+      </div>
 
     <!-- Contact Section -->
     <section id="contact" class="max-w-7xl mx-auto mt-20 px-6 mb-20">
