--- a/my-project/index.html
+++ b/my-project/index.html
@@ -41,7 +41,7 @@
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 
-<body class="bg-background text-white">
+<body class="bg-background text-white opacity-0 translate-y-5 transition-all duration-700">
 
   <!-- Header -->
   <header class="flex items-center justify-between max-w-7xl mx-auto p-6">
