--- a/my-project/index.html
+++ b/my-project/index.html
@@ -53,6 +53,7 @@
       <a href="#certifications" class="hover:text-primary">Certifications</a>
       <a href="#testimonials" class="hover:text-primary">Testimonials</a>
       <a href="#blog" class="hover:text-primary">Blog</a>
+      <a href="#projects" class="hover:text-primary">Projects</a>
       <a href="#contact" class="hover:text-primary">Contact</a>
     </nav>
     <button id="theme-toggle" class="border border-primary px-4 py-2 rounded-full hover:bg-primary hover:text-black transition">
@@ -275,6 +276,89 @@
           </a>
         </div>
       </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="mt-20">
+      <h3 class="text-2xl font-semibold text-primary mb-8">🚀 My Projects</h3>
+      
+      <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+
+        <!-- Project 1 -->
+        <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
+          <img src="https://via.placeholder.com/400x250.png?text=Project+1" alt="Project 1" class="rounded-lg w-full h-40 object-cover mb-4">
+          <h4 class="text-lg font-semibold text-primary">Portfolio Website</h4>
+          <p class="text-sm text-gray-400 mb-2">
+            A personal responsive portfolio made with HTML, Tailwind, and JavaScript.
+          </p>
+
+          <!-- Buttons -->
+          <div class="flex gap-2">
+            <a href="#" target="_blank" class="inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+              Live Preview
+            </a>
+            <button onclick="openModal('project1')"
+              class="px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+                View Details
+            </button>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+      <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
+          <img src="https://via.placeholder.com/400x250.png?text=Project+2" alt="Project 2" class="rounded-lg w-full h-40 object-cover mb-4">
+          <h4 class="text-lg font-semibold text-primary">Inventory System</h4>
+          <p class="text-sm text-gray-400 mb-2">
+            A web-based inventory management system with CRUD functionalities.
+          </p>
+
+          <!-- Buttons -->
+        <div class="flex gap-2">
+          <a href="#" target="_blank" class="inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+            Live Preview
+          </a>
+
+          <button onclick="openModal('project2')"
+            class="px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+              View Details
+          </button>
+        </div>
+      </div>
+
+        <!-- Project 3 -->
+        <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
+          <img src="https://via.placeholder.com/400x250.png?text=Project+3" alt="Project 3" class="rounded-lg w-full h-40 object-cover mb-4">
+          <h4 class="text-lg font-semibold text-primary">Landing Page</h4>
+          <p class="text-sm text-gray-400 mb-2">
+            A modern landing page for businesses using Tailwind CSS.
+          </p>
+
+          <!-- Buttons -->
+          <div class="flex gap-2">
+          <a href="#" target="_blank" class="inline-block px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+            Live Preview
+          </a>
+
+          <button onclick="openModal('project3')"
+            class="px-4 py-2 bg-primary text-black rounded hover:bg-primaryHover transition">
+              View Details
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Popup Modals -->
+    <div id="project1-modal" class="fixed inset-0 bg-black/70 backdrop-blur-sm flex items-center justify-center z-[9999] hidden">
+      <div class="bg-background p-6 rounded-xl max-w-lg w-full">
+        <h4 class="text-xl font-semibold text-primary mb-4">Portfolio Website</h4>
+        <p class="text-gray-300 mb-4">
+          This is a detailed description of my portfolio website, showcasing my skills in HTML, Tailwind CSS, and JavaScript.
+        </p>
+        <button onclick="closeModal('project1')" class="mt-4 px-4 py-2 bg-primary hover:bg-primaryHover text-black rounded transition">
+          Close
+        </button>
+      </div>
+    </div>
 
     <!-- Contact Section -->
     <section id="contact" class="max-w-7xl mx-auto mt-20 px-6 mb-20">
