--- a/my-project/index.html
+++ b/my-project/index.html
@@ -286,7 +286,7 @@
 
         <!-- Project 1 -->
         <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
-          <img src="https://via.placeholder.com/400x250.png?text=Project+1" alt="Project 1" class="rounded-lg w-full h-40 object-cover mb-4">
+          <img src="https://via.placeholder.com/400x250.png?text=Portfolio+Website" alt="Portfolio Website" class="rounded-lg w-full h-40 object-cover mb-4">
           <h4 class="text-lg font-semibold text-primary">Portfolio Website</h4>
           <p class="text-sm text-gray-400 mb-4">
             A personal responsive portfolio made with HTML, Tailwind, and JavaScript.
@@ -303,7 +303,7 @@
 
         <!-- Project 2 -->
         <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
-          <img src="https://via.placeholder.com/400x250.png?text=Project+2" alt="Project 2" class="rounded-lg w-full h-40 object-cover mb-4">
+          <img src="https://via.placeholder.com/400x250.png?text=Inventory+System" alt="Inventory System" class="rounded-lg w-full h-40 object-cover mb-4">
           <h4 class="text-lg font-semibold text-primary">Inventory System</h4>
           <p class="text-sm text-gray-400 mb-4">
             A web-based inventory management system with CRUD functionalities.
@@ -320,7 +320,7 @@
 
         <!-- Project 3 -->
         <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
-          <img src="https://via.placeholder.com/400x250.png?text=Project+3" alt="Project 3" class="rounded-lg w-full h-40 object-cover mb-4">
+          <img src="https://via.placeholder.com/400x250.png?text=Landing+Page" alt="Landing Page" class="rounded-lg w-full h-40 object-cover mb-4">
           <h4 class="text-lg font-semibold text-primary">Landing Page</h4>
           <p class="text-sm text-gray-400 mb-4">
             A modern landing page for businesses using Tailwind CSS.
