--- a/my-project/index.html
+++ b/my-project/index.html
@@ -320,7 +320,7 @@
 
         <!-- Project 3 -->
         <div class="group relative bg-white/5 border border-white/10 p-4 rounded-xl hover:scale-105 transition">
-          <img src="assets/images/inventory.jpg" alt="Landing Page" class="rounded-lg w-full h-40 object-cover mb-4">
+          <img src="assets/images/landingpage.jpg" alt="Landing Page" class="rounded-lg w-full h-40 object-cover mb-4">
           <h4 class="text-lg font-semibold text-primary">Landing Page</h4>
           <p class="text-sm text-gray-400 mb-4">
             A modern landing page for businesses using Tailwind CSS.
