--- a/my-project/index.html
+++ b/my-project/index.html
@@ -445,7 +445,7 @@
   </button>
 
   <!-- AOS JS-->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></scrip>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
   <!-- JavaScript -->
   <script src="js/script.js"></script>
