--- a/my-project/index.html
+++ b/my-project/index.html
@@ -24,12 +24,6 @@
     };
   </script>
 
-  <!-- Alpine.js -->
-  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-
-  <!-- Main JavaScript -->
-  <script src="js/main.js" defer></script>
-
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
@@ -460,7 +454,11 @@
   <!-- AOS JS-->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
-  <!-- JavaScript -->
+  <!-- Alpine.js -->
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+
+  <!-- Custom JavaScript -->
+  <script src="js/main.js" defer></script>
   <script src="js/script.js"></script>
 
 </body>
