--- a/my-project/index.html
+++ b/my-project/index.html
@@ -454,11 +454,12 @@
   <!-- AOS JS-->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
-  <!-- Alpine.js -->
+  <!-- Alpine.js (must be before main.js) -->
   <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 
-  <!-- Custom JavaScript -->
+  <!-- Main JS (handles modals) -->
   <script src="js/main.js" defer></script>
+  <!-- Other JS (back to top, theme toggle, etc.) -->
   <script src="js/script.js"></script>
 
 </body>
